# shell-c

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
src/: ast.c  ast.h  autocmp.h  cmd.c  cmd.h  expand.c  expand.h  job.c  job.h  main.c  misc.c  misc.h  parse.c  parse.h  ptr_array.c  ptr_array.h  redir.c  redir.h  scan.c  scan.h  sig.c  sig.h  token.h  trie.c  trie.h  xmalloc.h
tests/: run_tests.sh
